<resources>
    <string name="app_name">Pc-Store</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Inviald Email</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="please_enter_code_sent_to">Please Enter Code Sent To </string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="failed">Faild</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="points">Points</string>
    <string name="award">Award</string>
    <string name="galleries">Galleries</string>
    <string name="departments">Departments</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="name">Name</string>
    <string name="personal_information">Personal information</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="address">Address</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="update_profile">Update Profile</string>
    <string name="details">Details</string>
    <string name="no_image">No Images</string>
    <string name="wait">Wait</string>
    <string name="user_blocked">User Blocked</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="user_exist">User Exist</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="not_ava">Not available</string>
    <string name="egp">EGP</string>
    <string name="logout">Logout</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="pc_building">Bulid Your PC</string>
    <string name="laptops_gaming">Laptops-Gaming</string>
    <string name="accessories_and">Accessories And</string>
    <string name="software_support">Software Support</string>
    <string name="ricktech_brands">RickTech Brands</string>
    <string name="empty_cart">Empty cart</string>
    <string name="checkout">Checkout</string>
    <string name="account">Account</string>
    <string name="previous_orders">Previous orders</string>
    <string name="saved_buildings">Saved Buildings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_language">Change language</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="field_req">Field required</string>
    <string name="password_short">Password too short</string>

    <string name="create_account"><![CDATA[I don\'t have account <font color="#FF4D00">Sign Up</font>]]></string>
    <string name="email_address">Email address</string>
    <string name="next">Next</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="re_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="pas_not_match">Password not match</string>
    <string name="have_account"><![CDATA[Already have an account <font color="#FF4D00">Log In</font>]]></string>
    <string name="ship_to">Ship to:</string>
    <string name="location_details">Location details:</string>
    <string name="it_will_be_shipped_by">* it will be shipped by</string>
    <string name="order_summary">Order Summary:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="shipping_fee">Shipping Fee:</string>
    <string name="total">Total:</string>
    <string name="more_details_town_street">More details(Town-street)</string>
    <string name="select_the_address">Select location on map</string>
    <string name="accessories">Accessories</string>

    <string name="products">Products</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="score">score :</string>
    <string name="compare">Compare</string>
    <string name="us_pas_inc">Username or password incorrect</string>
    <string name="inv_code">Invalid verification code</string>
    <string name="email_found">Email found</string>
    <string name="un_found">Username found</string>
    <string name="add_to_build">Add To Build</string>
    <string name="inc_email">Incorrect email</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="back">Back</string>
    <string name="save">save</string>
    <string name="save_build_as">Save Build As:</string>
    <string name="enter_build_name">Enter build name</string>
    <string name="no_games">No games to compare</string>
    <string name="perfect">Perfect</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="suc">Success!</string>
    <string name="reset">Reset</string>
    <string name="inv_url">Invalid url</string>
    <string name="build_name">Build Name</string>
    <string name="created_date">Created date:</string>
    <string name="delete">Delete</string>
    <string name="build">Build</string>
    <string name="free">Free</string>
    <string name="current_order">Current Order</string>
    <string name="order_details">Order details</string>
    <string name="order_number">Order number:</string>
    <string name="status">Status:</string>
    <string name="new1">New</string>
    <string name="pending">Pending</string>
    <string name="delivering">Delivering</string>
    <string name="admin_cancel">Admin cancel</string>
    <string name="user_canceled">User canceled</string>
    <string name="back_req">Back request</string>
    <string name="backed">Backed</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="parts">Parts</string>
    <string name="pcs">PCs</string>
    <string name="gaming_laptops">Gaming laptops</string>
    <string name="gaming_pcs">Gaming PCs</string>
    <string name="note_books">Note Books</string>
    <string name="riktick">Riktick</string>
    <string name="most_search">Most Search</string>
    <string name="dark_mode">Dark mode</string>
</resources>