<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/offer"
        android:title="@string/offers"
        android:icon="@drawable/ic_offer2"
        app:showAsAction="ifRoom"

        />
    <item android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="ifRoom"

        />


    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_user"
        app:showAsAction="ifRoom"

        />

</menu>